# xllm

./: CMakeLists.txt  mkdocs_zh.yml
docs/zh/getting_started/: qwen_image_edit_plus.md
tests/core/runtime/: spec_input_builder_test.cpp
xllm/: CMakeLists.txt  xllm.cpp
xllm/api_service/: anthropic_service_impl.cpp  api_service.cpp  api_service_impl.h  serving_mode.h
xllm/core/common/: global_flags.cpp  global_flags.h  macros.h  options.h  types.h
xllm/core/distributed_runtime/: CMakeLists.txt  collective_service.cpp  comm_channel.cpp  dist_manager.cpp  dit_engine.cpp  dit_master.cpp  dit_master.h  llm_engine.h  master.cpp  master.h  shm_channel.cpp  speculative_engine.cpp  speculative_engine.h  (+9 more)
xllm/core/kernels/npu/triton/: CMakeLists.txt  kernel_handle.cpp  kernel_handle.h  kernel_launchers.h  kernel_loader.cpp  kernel_loader.h  kernel_registry.cpp  kernel_registry.h  macros.h  npu_triton_add_kernel.cpp  npu_triton_add_kernel.h
xllm/core/kernels/npu/triton/binary/: add_kernel.json  add_kernel.npubin  fused_gdn_gating_head8_kernel.json  fused_gdn_gating_head8_kernel.npubin
xllm/core/kernels/npu/triton/csrc/: kernel_handle.cpp  kernel_loader.cpp  kernel_registry.cpp
xllm/core/kernels/npu/triton/csrc/torch_api/: npu_triton_fused_gdn_gating.cpp  npu_triton_fused_gdn_gating.h
xllm/core/kernels/npu/triton/include/: kernel_handle.h  kernel_launchers.h  kernel_loader.h  kernel_registry.h  macros.h
xllm/core/kernels/npu/triton/test/: CMakeLists.txt  test_triton_add_kernel.cpp  test_utils.h  triton_fused_gdn_gating_test.cpp  triton_layer_norm_fwd_test.cpp  triton_recurrent_gated_delta_rule_test.cpp
xllm/core/kernels/npu/triton/torch_api/: npu_triton_causal_conv1d_update.cpp  npu_triton_fused_gdn_gating.cpp  npu_triton_fused_gdn_gating.h  npu_triton_layer_norm_fwd.cpp  npu_triton_layer_norm_fwd.h  npu_triton_recurrent_gated_delta_rule.cpp  npu_triton_recurrent_gated_delta_rule.h  triton_ops_api.h  utils.h
xllm/core/kernels/npu/triton/triton_src/: causal_conv1d_update.py  fused_gdn_gating.py  fused_recurrent_gated_delta_rule.py  gdn.wrapper  layer_norm_fwd.py  layernorm_guard.py
xllm/models/: model_registry.cpp  model_registry.h  models.h
xllm/processors/: CMakeLists.txt  audio_utils.h  feature_extraction_whisper.cpp  feature_extraction_whisper.h  feature_extractor.cpp  feature_extractor.h  pywarpper_image_processor.cpp  qwen2_vl_image_processor.cpp  qwen2_vl_image_processor.h
xllm/proto/: image_generation.proto  worker.proto
xllm/pybind/: bind.cpp  llm.py  mm_utils.py  vlm.py
(+212 files in other folders)
